--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
@@ -87,10 +87,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaime\n",
+      "Pablo\n",
+      "Wasi\n",
+      "['Jaime', 'Pablo', 'Wasi']\n",
+      "Jaime\n",
+      "['Pablo', 'Wasi']\n",
+      "['Pablo', 'Wasi', 'Alfredo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_cumple = [\"Jaime\", \"Pablo\", \"Wasi\"]\n",
+    "for i in lista_cumple:\n",
+    "    print(i)\n",
+    "\n",
+    "lista_cumple.sort()\n",
+    "print(lista_cumple)\n",
+    "print(lista_cumple[0])\n",
+    "lista_cumple.remove (\"Jaime\")\n",
+    "print(lista_cumple)\n",
+    "lista_cumple.append (\"Alfredo\")\n",
+    "print(lista_cumple)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(2, 'jose', 65)\n",
+      "(1, 2, 'jose', 65)\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla_ejemplo = (1,)\n",
+    "print(type(tupla_ejemplo))\n",
+    "tupla_2 = (2, \"jose\", 65)\n",
+    "print(tupla_2)\n",
+    "tupla_ejemplo = tupla_ejemplo + tupla_2\n",
+    "print(tupla_ejemplo)\n",
+    "tupla_3 = tupla_ejemplo[0:2]\n",
+    "print(tupla_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [1,2,3,4,5,6]\n",
+    "ejer_3.sort(reverse= True)\n",
+    "print(ejer_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "resultado = \" \".join(ejer_4)\n",
+    "print(resultado)\n",
+    "print(type(resultado))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "ejer_5.index(45)\n",
+    "ejer_5.pop(4)\n",
+    "ejer_5.insert(4,0)\n",
+    "print(ejer_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,10 +359,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "print(ejer_6[2])\n",
+    "print(ejer_6[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,15 +408,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "47\n",
+      "19\n",
+      "29\n",
+      "45\n",
+      "67\n",
+      "78\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "for ejer_7_2 in ejer_7 :\n",
+    "    if ejer_7_2 !=3:\n",
+    "        print(ejer_7_2)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.0"
   },
   "orig_nbformat": 4
  },
