--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_03/Ejercicios_Repaso/Ejercicios_Bucles_if_for.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_03/Ejercicios_Repaso/Ejercicios_Bucles_if_for.ipynb
@@ -59,6 +59,32 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_lista = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "elemento_a_eliminar = \"VW\"\n",
+    "\n",
+    "# Crear una nueva lista sin el elemento a eliminar\n",
+    "nueva_lista = []\n",
+    "for elemento in mi_lista:\n",
+    "    if elemento != elemento_a_eliminar:\n",
+    "        nueva_lista.append(elemento)\n",
+    "\n",
+    "print(nueva_lista)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,10 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_nueva =[elemento for elemento in mi_lista if elemento != \"VW\"]\n",
+    "\n",
+    "print(lista_nueva)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +119,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nueva_lista_2 = []\n",
+    "\n",
+    "# Inicializamos el índice para recorrer la lista\n",
+    "indice = 0\n",
+    "\n",
+    "# Usamos un bucle while para recorrer la lista\n",
+    "while indice < len(mi_lista):\n",
+    "    # Si el elemento no es \"VW\", lo añadimos a la nueva lista\n",
+    "    if mi_lista[indice] != \"VW\" :\n",
+    "        nueva_lista_2.append(mi_lista[indice])\n",
+    "    \n",
+    "    # Incrementamos el índice para pasar al siguiente elemento\n",
+    "    indice += 1\n",
+    "\n",
+    "# Imprimimos la nueva lista\n",
+    "print(nueva_lista_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra 'm' aparece 2 veces.\n",
+      "La letra 'M' aparece 1 veces.\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"En un lugar de La Mancha, de cuyo nombre no quiero acordarme\"\n",
+    "letra = \"m\" \n",
+    "letra_2= \"M\"\n",
+    "\n",
+    "# Usamos count() para contar las apariciones de la letra\n",
+    "cantidad = frase.count(\"m\")\n",
+    "cantidad_1= frase.count(\"M\")\n",
+    "\n",
+    "print(f\"La letra '{letra}' aparece {cantidad} veces.\")\n",
+    "print(f\"La letra '{letra_2}' aparece {cantidad_1} veces.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,10 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuencia = [1,2,3,4,5,6,7,8,9,10] \n",
+    "elemento_a_eliminar = 3 , 4 , 9\n",
+    "for elemento_4 in secuencia : \n",
+    "    secuencia.remove(elemento_a_eliminar)\n",
+    "print(secuencia)"
+   ]
   }
  ],
  "metadata": {
@@ -149,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
