--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -79,10 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'> (('x', 1), ('x', 2), ('x', 3), ('y', 1), ('y', 2), ('z', 1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "ejer_1 = tuple(ejer_1)\n",
+    "print (type(ejer_1) ,ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +130,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys([4, 2, 8, 5])\n",
+      "dict_values([78, 98, 234, 29])\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 9: 567}\n",
+      "4   78\n",
+      "2   98\n",
+      "8   234\n",
+      "5   29\n",
+      "9   567\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = {4:78, 2:98, 8:234, 5:29}\n",
+    "print(ejer_2 .keys())\n",
+    "print(ejer_2.values())\n",
+    "ejer_2 [9] = 567\n",
+    "print(ejer_2)\n",
+    "for i in ejer_2:\n",
+    "    print(i, \" \", ejer_2[i])\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n",
+      "1 11\n",
+      "2 22\n",
+      "3 33\n",
+      "4 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3_1 = {1: 11, 2: 22}\n",
+    "ejer_3_2 = {3: 33, 4: 44}\n",
+    "ejer_3_1.update(ejer_3_2)\n",
+    "print(ejer_3_1)\n",
+    "for e in ejer_3_1:\n",
+    "    print(e, ejer_3_1[e])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'amarillo', 'rojo', 'azul'}\n",
+      "{'amarillo', 'naranja', 'rojo', 'azul'}\n",
+      "{'amarillo', 'rojo', 'azul'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores = {\"azul\", \"amarillo\", \"rojo\"}\n",
+    "print(colores)\n",
+    "colores.add(\"naranja\")\n",
+    "print(colores)\n",
+    "colores.remove(\"naranja\")\n",
+    "print(colores)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "165"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_5 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "sum(ejer_5.values())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,15 +352,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ejer_6 \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m11\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4.5\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesto\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4.5\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesto\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquizás\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;241m11\u001b[39m}\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(ejer_6)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11}\n",
+    "print(ejer_6)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   },
   "orig_nbformat": 4
  },
