--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -59,10 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "ejer= []\n",
+    "for e in ejer_2:\n",
+    "    ejer.append(e**2)\n",
+    "print(ejer)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +93,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'un': [7], 'es': [13], 'binario': [15]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "\n",
+    "vistos = set()\n",
+    "indices_duplicados = {}\n",
+    "\n",
+    "\n",
+    "for i, elem in enumerate(ejer_3):\n",
+    "    if elem in vistos:\n",
+    "        if elem in indices_duplicados:\n",
+    "            indices_duplicados[elem].append(i)\n",
+    "        else:\n",
+    "            indices_duplicados[elem] = [i]\n",
+    "    else:\n",
+    "        vistos.add(elem)\n",
+    "\n",
+    "print(indices_duplicados)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(ejer_9.count(3))\n",
+    "\n",
+    "ejer_66 = (5,6,7,8,9,10)\n",
+    "print(len(ejer_66))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el 60 no se encuentra en la tupla\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 60 in ejer_9:\n",
+    "    print(\"el 60 esta dentro de la tupla\")\n",
+    "else:\n",
+    "    print(\"el 60 no se encuentra en la tupla\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +199,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot convert dictionary update sequence element #0 to a sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(ejer_9))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mset\u001b[39m(ejer_9))\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mejer_9\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot convert dictionary update sequence element #0 to a sequence"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(list(ejer_9))\n",
+    "print(set(ejer_9))\n",
+    "print(dict(ejer_9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "resultado = 1\n",
+    "for e in ejer_6.values():\n",
+    "    resultado *= e \n",
+    "\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,14 +273,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'el niño del pijama de rayas', 'autor': 'jose', 'idioma_original': 'español', 'año_publicacion': 1999}\n",
+      "libreria: ['el principito', 'el arte de la guerra', 'geronimo estilton', 'manolito gafotas']\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "diccionario = {\n",
+    "    \"titulo\": \"el niño del pijama de rayas\",  \n",
+    "    \n",
+    "    \"autor\": \"jose\",   \n",
+    "    \n",
+    "    \"idioma_original\": \"español\",  \n",
+    "   \n",
+    "    \"año_publicacion\": 1999\n",
+    "\n",
+    "}\n",
+    "print(diccionario)\n",
+    "libreria = []\n",
+    "libreria.append(\"el principito\")\n",
+    "libreria.append(\"el arte de la guerra\")\n",
+    "libreria.append(\"geronimo estilton\")\n",
+    "libreria.append(\"manolito gafotas\")\n",
+    "print(\"libreria:\",libreria)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +315,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'el niño del pijama de rayas', 'autor': 'jose', 'idioma_original': 'esperanto', 'año_publicacion': 1999, 'idioma': 'esperanto'}\n",
+      "{'titulo': 'el niño del pijama de rayas', 'autor': 'jose', 'idioma_original': 'esperanto', 'año_publicacion': 1999}\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario [\"idioma_original\"] = \"esperanto\"\n",
+    "print(diccionario)\n",
+    "del diccionario [\"idioma\"]\n",
+    "print(diccionario)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,10 +345,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ese no lo tengo, ¿mola?\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buscar_libro (titulo):\n",
+    "\n",
+    "    libreria_2 = [\"cien años de soledad\", 1984, \"harry potter\", \"el quijote\"]\n",
+    "\n",
+    "    if titulo in libreria_2:\n",
+    "         print(titulo)\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"ese no lo tengo, ¿mola?\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "titulo_buscar = input(\"el niño del pijama de rayas\")\n",
+    "resultado = buscar_libro(titulo_buscar)\n",
+    "print(resultado)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,15 +395,40 @@
    "metadata": {},
    "source": [
     "## Ejercicio 11\n",
-    "Convierte el programa del ejercicio 9 en una función al que se le pasen como argumentos la librería, posicional, y el título, argumento keyword con valor \"ninguno\", por defecto."
+    "=Convierte el programa del ejercicio 9 en una función al que se le pasen como argumentos la librería, posicional, y el título, argumento keyword con valor \"ninguno\", por defecto."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se ha especificado un título.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buscar_libro(libreria, titulo=\"ninguno\"):\n",
+    "    \n",
+    "    if titulo == \"ninguno\":\n",
+    "        return \"No se ha especificado un título.\"\n",
+    "    \n",
+    "    \n",
+    "    if titulo in libreria:\n",
+    "        print (titulo)\n",
+    "    else:\n",
+    "        return \"Ese no lo tengo, ¿mola?\"\n",
+    "\n",
+    "titulo_buscar = input(\"manolito gafotas\")\n",
+    "resultado = buscar_libro(titulo_buscar)\n",
+    "print(resultado)\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +440,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la dirección no es válida\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validez_mail (mail):\n",
+    "    if \"@\" in mail:\n",
+    "        return True\n",
+    "    else:\n",
+    "       return False\n",
+    "mail_usuario = input(\"¿cuál es tu mail?\")\n",
+    "\n",
+    "if validez_mail(mail_usuario):\n",
+    "    print(\"la direccion es valida\")\n",
+    "else:\n",
+    "    print(\"la dirección no es válida\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,15 +482,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra del DNI es:  K\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "DNI= 55555555\n",
+    "palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "print('La letra del DNI es: ', palabra[DNI%23])\n",
+    "def validez_DNI(DNI):\n",
+    "    if len (DNI)>= 7 and len (DNI)<= 8:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "prueba = input(\"dime tu DNI\")\n",
+    "resultado = validez_DNI (prueba)\n",
+    "print(resultado)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   },
   "orig_nbformat": 4
  },
