--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
@@ -63,10 +63,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Tienda:\n",
+    "    '''\n",
+    "    Clase con los componentes de una tienda de Electrodomesticos S.A.\n",
+    "    atributos:\n",
+    "        tipo = Electrodomestico -> String\n",
+    "        abierta = True -> Bool\n",
+    "    '''\n",
+    "    tipo = \"Electrodomésticos\"\n",
+    "    abierta = True\n",
+    "    def __init__(self, nombre, direccion, num_empleados, ventas_3_meses):\n",
+    "        '''\n",
+    "        Elementos particulares de cada tienda\n",
+    "        Input:\n",
+    "            nombre: string\n",
+    "            direccion: string\n",
+    "            num_emp: int\n",
+    "            ventas_3_meses: list\n",
+    "        '''\n",
+    "        self.nombre = nombre\n",
+    "        self.direccion = direccion\n",
+    "        self.num_empleados = num_empleados\n",
+    "        self.ventas_3_meses = ventas_3_meses\n",
+    "    def tot_ventas(self):\n",
+    "        '''\n",
+    "        Metodo que suma todas las ventas de la tienda\n",
+    "        Output:\n",
+    "            total de ventas -> float/int\n",
+    "        '''\n",
+    "        return sum(self.ventas_3_meses)\n",
+    "    def vent_empl(self):\n",
+    "        '''\n",
+    "        Calcula la media de de las ventas por empleado\n",
+    "        output:\n",
+    "            float con la media\n",
+    "        '''\n",
+    "        # Opcion 1\n",
+    "        #return sum(self.ventas_3_meses)/self.num_empleados\n",
+    "        # Opcion 2\n",
+    "        #vent_tot = sum(self.ventas_3_meses)\n",
+    "        #ratio_empl = vent_tot/self.num_empleados\n",
+    "        #return ratio_empl\n",
+    "        # Opcion 3\n",
+    "        return self.tot_ventas()/self.num_empleados\n",
+    "    def nombre_direc(self):\n",
+    "        '''\n",
+    "        Metodo que devuelve un string con el nombre y la direccion\n",
+    "        Output:\n",
+    "            string\n",
+    "        '''\n",
+    "        return \"Nombre tienda: \" + self.nombre + \"\\nDireccion: \" + self.direccion\n",
+    "    def ventas_ult_mes(self):\n",
+    "        '''\n",
+    "        Ventas del utlimo mes\n",
+    "        Output:\n",
+    "            float/int\n",
+    "        '''\n",
+    "        v_ult_mes = self.ventas_3_meses[-1]\n",
+    "        return v_ult_mes\n",
+    "    def proyec_marketing(self, marketing):\n",
+    "        '''\n",
+    "        Método para dar una proyección de las ventas en caso de haber invertido X dinero\n",
+    "        en marketing en esa tienda. Siendo X el parámetro de entrada. Si X es menor de 1000,\n",
+    "        las ventas de los ultimos 3 meses hubiesen sido de (1.2 x ventas), si es mayor o igual de 1000,\n",
+    "        las ventas hubiesen sido de (1.5 x venta). El método reescribe el atributo de ventas en los\n",
+    "        últimos 3 meses, y además devuelve las ventas con el aumento\n",
+    "        Input:\n",
+    "            marketing: cantidad invertida en marketing -> float/int\n",
+    "        Output:\n",
+    "            lista de floats con el resultado de aplicar el algoritmo marketing\n",
+    "        '''\n",
+    "        output = []\n",
+    "        for i in self.ventas_3_meses:\n",
+    "            if marketing < 1000:\n",
+    "                output.append(i*1.2)\n",
+    "            else:\n",
+    "                output.append(i*1.5)\n",
+    "        self.ventas_3_meses = output\n",
+    "        return output\n",
+    "    \n",
+    "   \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda1 = Tienda(\"mi tienda 1\", \"Avenida del electrodomestico\", 3, [1000, 2000, 1500])\n",
+    "tienda2 = Tienda(\"mi tienda 2\", \"Calle de los ordenadores\", 5, [2000, 5000, 1500])\n",
+    "tienda3 = Tienda(\"mi tienda 3\", \"Camino de la tablet\", 10, [10000, 6000, 12000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Electrodomésticos\n",
+      "True\n",
+      "mi tienda 1\n",
+      "Avenida del electrodomestico\n",
+      "3\n",
+      "\n",
+      "4500\n",
+      "1500.0\n",
+      "Nombre tienda: mi tienda 1\n",
+      "Direccion: Avenida del electrodomestico\n",
+      "1500\n",
+      "[1500.0, 3000.0, 2250.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tienda1.tipo)\n",
+    "print(tienda1.abierta)\n",
+    "print(tienda1.nombre)\n",
+    "print(tienda1.direccion)\n",
+    "print(tienda1.num_empleados)\n",
+    "print(\"\")\n",
+    "print(tienda1.tot_ventas())\n",
+    "print(tienda1.vent_empl())\n",
+    "print(tienda1.nombre_direc())\n",
+    "print(tienda1.ventas_ult_mes())\n",
+    "print(tienda1.proyec_marketing(2000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15750.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot_tiendas = [tienda1, tienda2, tienda3]\n",
+    "total_ventas = 0\n",
+    "for i in tot_tiendas:\n",
+    "    total_ventas = total_ventas + i.ventas_ult_mes()\n",
+    "print(total_ventas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for i in tot_tiendas:\n",
+    "    if \"avenida\" in i.direccion.lower():\n",
+    "    #if \"Avenida\" in i.direccion:\n",
+    "        print(i.nombre)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +271,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class perro:\n",
+    "   \n",
+    "    \n",
+    "    def __init__ (self, raza,color_pelo= \"Marrón\",dueño=None):\n",
+    "        self.patas = 4\n",
+    "        self.orejas = 2\n",
+    "        self.ojos = 2\n",
+    "        self.velocidad = 0\n",
+    "        \n",
+    "        self.raza= raza\n",
+    "        self.color_pelo= color_pelo\n",
+    "        self.dueño= dueño\n",
+    "    \n",
+    "    def andar (self,aumento_velocidad):\n",
+    "        self.velocidad += aumento_velocidad\n",
+    "        print(\"está andando a\", self.velocidad, \"km/h\")\n",
+    "    def parar (self):\n",
+    "        self.velocidad = 0\n",
+    "        print(self.velocidad)\n",
+    "    def ladrar (self,ladrido):\n",
+    "        return f\"GUAU! {ladrido}\"\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labrador\n",
+      "marrón\n",
+      "sin dueño\n",
+      "0\n",
+      "<bound method perro.ladrar of <__main__.perro object at 0x10ca817f0>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "Darko= perro(\"labrador\",\"marrón\",\"sin dueño\")\n",
+    "print(Darko.raza)\n",
+    "print(Darko.color_pelo)\n",
+    "print(Darko.dueño)\n",
+    "print(Darko.velocidad)\n",
+    "print(Darko.ladrar)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "está andando a 15 km/h\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Darko.andar(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method perro.parar of <__main__.perro object at 0x10ca817f0>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Darko.parar)"
+   ]
   }
  ],
  "metadata": {
@@ -122,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
