--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
       "marrón\n",
       "sin dueño\n",
       "0\n",
-      "<bound method perro.ladrar of <__main__.perro object at 0x10ca817f0>>\n"
+      "<bound method perro.ladrar of <__main__.perro object at 0x10ca81940>>\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -348,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method perro.parar of <__main__.perro object at 0x10ca817f0>>\n"
+      "<bound method perro.parar of <__main__.perro object at 0x10ca81940>>\n"
      ]
     }
    ],
