--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -95,9 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'User' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Jeff \u001b[38;5;241m=\u001b[39m \u001b[43mUser\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJeff\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m70\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m Joe \u001b[38;5;241m=\u001b[39m User(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJoe\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m70\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m Jeff\u001b[38;5;241m.\u001b[39mwithdraw(\u001b[38;5;241m2\u001b[39m) \u001b[38;5;66;03m# Devuelve 'Jeff tiene 68.'\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'User' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Jeff = User('Jeff', 70, True)\n",
     "Joe = User('Joe', 70, False)\n",
@@ -115,6 +127,116 @@
     "Joe.check(Jeff, 100) # Lanza un ValueError\n",
     "\n",
     "Jeff.add_cash(20.00) # Devuelve 'Jeff tiene 118.'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class usuario:\n",
+    "    def __init__(self,nombre,saldo_inicial,cuenta_bancaria=True):\n",
+    "        self.nombre= nombre\n",
+    "        self.saldo= saldo_inicial\n",
+    "        self.cuenta_bancaria= cuenta_bancaria\n",
+    "    \n",
+    "    def retirar_dinero (self,dinero):\n",
+    "        if self.saldo < dinero:\n",
+    "            raise ValueError\n",
+    "        self.saldo -= dinero\n",
+    "        print(self.nombre, \"tiene un saldo de :\", self.saldo)\n",
+    "    \n",
+    "    def transfer (self,otro_usuario,dinero):\n",
+    "        if self.saldo < dinero:\n",
+    "            raise ValueError\n",
+    "        if not otro_usuario.cuenta_bancaria:\n",
+    "            raise ValueError\n",
+    "        self.saldo -= dinero\n",
+    "        otro_usuario.saldo += dinero\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo}. {otro_usuario.nombre} tiene un saldo de {otro_usuario.saldo}.\"\n",
+    "        \n",
+    "    \n",
+    "    def add_cash (self,dinero):\n",
+    "        self.saldo += dinero \n",
+    "        print(self.nombre, \"tiene un saldo de \", self.saldo)\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeff tiene un saldo de : 300\n",
+      "None\n",
+      "joe tiene un saldo de : 450\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "usuario_1= usuario (\"jeff\",500,True)\n",
+    "usuario_2= usuario(\"joe\", 500, False)\n",
+    "\n",
+    "print(usuario_1.retirar_dinero(200))\n",
+    "print(usuario_2.retirar_dinero(50))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeff tiene un saldo de 2150 y joe tiene un saldo de 800\n",
+      "None\n",
+      "jeff tiene un saldo de 2100 y joe tiene un saldo de 850\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(usuario_1.transfer(usuario_2, 100))\n",
+    "\n",
+    "\n",
+    "usuario_2.cuenta_bancaria = True  \n",
+    "print(usuario_1.transfer(usuario_2, 50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeff tiene un saldo de  3100\n",
+      "None\n",
+      "joe tiene un saldo de  950\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(usuario_1.add_cash (1000))\n",
+    "print(usuario_2.add_cash(100))"
    ]
   }
  ],
@@ -134,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
