--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
    ],
    "source": [
     "usuario_1= usuario (\"jeff\",500,True)\n",
-    "usuario_2= usuario(\"joe\", 500, False)\n",
+    "usuario_2= usuario(\"joe\", 500, True)\n",
     "\n",
     "print(usuario_1.retirar_dinero(200))\n",
     "print(usuario_2.retirar_dinero(50))\n",
@@ -195,27 +195,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jeff tiene un saldo de 2150 y joe tiene un saldo de 800\n",
-      "None\n",
-      "jeff tiene un saldo de 2100 y joe tiene un saldo de 850\n",
-      "None\n"
+      "jeff tiene un saldo de 200. joe tiene un saldo de 550.\n",
+      "jeff tiene un saldo de 50. joe tiene un saldo de 700.\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "print(usuario_1.transfer(usuario_2, 100))\n",
+    "print(usuario_1.transfer(usuario_2 , 100))\n",
     "\n",
     "\n",
-    "usuario_2.cuenta_bancaria = True  \n",
-    "print(usuario_1.transfer(usuario_2, 50))"
+    "  \n",
+    "print(usuario_1.transfer(usuario_2,150))"
    ]
   },
   {
