--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/09_Ejercicios_Vectores.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/09_Ejercicios_Vectores.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,31 @@
     "    'Diego': [-1, 1],\n",
     "    'Gabriela': [5, -2],\n",
     "    'Mateo': [-5, 3],\n",
-    "    'Sofía': [-5, 1]\n",
-    "}"
+    "    'Sofía': [-5, 1],\n",
+    "    \"Teresa\": [-5,-2],\n",
+    "    \"Udo\": [4,0]\n",
+    "}\n",
+    "def add_alumno(nombre, volar, comer, alumnos_aidone):\n",
+    "    alumnos_aidone = add_alumno (\"Teresa\",-5,-2)\n",
+    "    alumnos_aidone= add_alumno(\"Udo\",4,0)\n",
+    "    return diccionario_resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Rodrigo': [5, 4], 'Lucia': [2, -3], 'Alejandro': [3, 5], 'Valeria': [-5, 4], 'Javier': [0, -1], 'Camila': [3, 2], 'Diego': [-1, 1], 'Gabriela': [5, -2], 'Mateo': [-5, 3], 'Sofía': [-5, 1], 'Teresa': [-5, -2], 'Udo': [4, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(alumnos_aidone)"
    ]
   },
   {
@@ -123,10 +146,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alumnos a los que más les gusta volar: ['Rodrigo', 'Gabriela']\n",
+      "Alumnos a los que más les gusta comer: ['Alejandro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "alumnos_que_mas_gustan_volar = []\n",
+    "alumnos_que_mas_gustan_comer = []\n",
+    "\n",
+    "\n",
+    "for alumno, puntuaciones  in alumnos_aidone.items():\n",
+    "    volar,comer = puntuaciones\n",
+    "   \n",
+    "    if volar == 5:\n",
+    "        alumnos_que_mas_gustan_volar.append(alumno)\n",
+    "   \n",
+    "    if comer == 5:\n",
+    "        alumnos_que_mas_gustan_comer.append(alumno)\n",
+    "\n",
+    "\n",
+    "print(\"Alumnos a los que más les gusta volar:\", alumnos_que_mas_gustan_volar)\n",
+    "print(\"Alumnos a los que más les gusta comer:\", alumnos_que_mas_gustan_comer)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,10 +211,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def distancia_2d(vec1,vec2,precision= 2):\n",
+    "    suma= 0\n",
+    "    for indice_componente in range(2):\n",
+    "        suma += (vec1[indice_componente] - vec2[indice_componente])**2\n",
+    "        distancia = math.sqrt(suma)\n",
+    "        distancia = round(distancia,precision)\n",
+    "        return distancia\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Rodrigo, el curso asignado es CAI\n",
+      "Para Lucia, el curso asignado es CAI\n",
+      "Para Alejandro, el curso asignado es CAI\n",
+      "Para Valeria, el curso asignado es NMPC\n",
+      "Para Javier, el curso asignado es CAI\n",
+      "Para Camila, el curso asignado es CAI\n",
+      "Para Diego, el curso asignado es NMPC\n",
+      "Para Gabriela, el curso asignado es CAI\n",
+      "Para Mateo, el curso asignado es NMPC\n",
+      "Para Sofía, el curso asignado es NMPC\n",
+      "Para Teresa, el curso asignado es NMPC\n",
+      "Para Udo, el curso asignado es CAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
+    "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
+    "diccionario_reparto = {}\n",
+    "\n",
+    "for alumno, vector in alumnos_aidone.items(): # Recorremos el diccionario donde tenemos el vector que caracteriza \n",
+    "    # cada alumno\n",
+    "    \n",
+    "    distancia_minima = 99999999 # Por ahora cualquier distancia a los \n",
+    "    #alumons de referencia es buena\n",
+    "    \n",
+    "    indice_distancia_minima = -1 # Tenemos un indice al curso-alumno de referencia\n",
+    "    diccionario_reparto[alumno] = {\"distancias\": [], \"curso_elegido\": \"\"}\n",
+    "    # Creamos una colección, un diccionario para almacenar los resultados\n",
+    "    for indice_curso,alumno_ref in enumerate(alumnos_ref): # Y ahora el bucle para \n",
+    "        # calcular la distancia a los vectores de los alumnos de referencia\n",
+    "        vec_ref = alumnos_aidone[alumno_ref] # Recuperamos el vector que \n",
+    "        # caracteriza al alumno de referencia\n",
+    "        \n",
+    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        # con el alumno del bucle principal\n",
+    "        if distancia < distancia_minima: # Y vemos si es menor que #\n",
+    "            # la distancia mínima última para el alumno del bucle principal\n",
+    "            distancia_minima = distancia # Si lo es, actualizamos \n",
+    "            #la nueva distancia mínima\n",
+    "            indice_distancia_minima = indice_curso # Y actualizamos \n",
+    "            # el indice del curso escogido\n",
+    "            diccionario_reparto[alumno][\"distancias\"].append(distancia) \n",
+    "        # en cualquier caso me guardo la distancia calculada...\n",
+    "        diccionario_reparto[alumno][\"curso_elegido\"] = \\\n",
+    "        curso_asignado[indice_distancia_minima] # Traduzo el indice del curso al curso\n",
+    "    print(f\"Para {alumno}, el curso asignado es \" + \\\n",
+    "          f\"{diccionario_reparto[alumno]['curso_elegido']}\") # Y vamos volcando \n",
+    "        # la elección de nuestro algoritmo"
+   ]
   },
   {
    "attachments": {
@@ -189,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def distancia_2d(vec1, vec2, precision = 2): # Esperamos vectores de 2 dimensiones, es decir \"listas\" con longitud 2\n",
+    "def distancia_2d(vec1,vec2): # Esperamos vectores de 2 dimensiones, es decir \"listas\" con longitud 2\n",
     "    suma = 0\n",
-    "    for indice_componente in range(2): # 2 por ser la cardinalidad (número de componentes del vector)\n",
+    "    for indice_componente in range (): # 2 por ser la cardinalidad (número de componentes del vector)\n",
     "        suma += (vec1[indice_componente] - vec2[indice_componente])**2\n",
     "    distancia = math.sqrt(suma)\n",
     "    distancia = round(distancia, precision)\n",
@@ -235,22 +355,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "vec1 = [12,-4,3,0, 3.5]\n",
     "vec2 = [1, 3, -0.33, -12.1]\n",
     "vec3 = [-2,0,-1,0]\n",
-    "vec4 = [0,0,1,1]\n"
+    "vec4 = [0,0,1,1]\n",
+    "import math\n",
+    "\n",
+    "def distancia_2d(vec1,vec2,vec3,vec4,precision= 2):\n",
+    "    suma = 0\n",
+    "    for indice_componente in range (4): \n",
+    "        suma += (vec1[indice_componente] - vec2[indice_componente]) - vec3[indice_componente] - vec4[indice_componente]**2\n",
+    "    distancia = math.sqrt(suma)\n",
+    "    distancia = round(distancia, precision)\n",
+    "    return distancia\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distancia entre vec1 y vec2: 20.6\n",
+      "Distancia entre vec1 y vec3: 15.5\n",
+      "Distancia entre vec1 y vec4: 13.05\n",
+      "Distancia entre vec2 y vec3: 12.84\n",
+      "Distancia entre vec2 y vec4: 13.54\n",
+      "Distancia entre vec3 y vec4: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "\n",
+    "def distancia(vec1, vec2, precision=2):\n",
+    "    \n",
+    "    if len(vec1) != len(vec2):\n",
+    "        raise ValueError(\"Los vectores deben tener la misma longitud.\")\n",
+    "    \n",
+    "    suma = 0\n",
+    "    for i in range(len(vec1)):  \n",
+    "        suma += (vec1[i] - vec2[i])**2\n",
+    "    \n",
+    "    distancia = math.sqrt(suma)\n",
+    "    distancia = round(distancia, precision)  \n",
+    "    return distancia\n",
+    "\n",
+    "\n",
+    "vec1 = [12, -4, 3, 3.5]\n",
+    "vec2 = [1, 3, -0.33, -12.1]\n",
+    "vec3 = [-2, 0, -1, 0]\n",
+    "vec4 = [0, 0, 1, 1]\n",
+    "\n",
+    "\n",
+    "distancia_1_2 = distancia(vec1, vec2, precision=2)\n",
+    "distancia_1_3 = distancia(vec1, vec3, precision=2)\n",
+    "distancia_1_4 = distancia(vec1, vec4, precision=2)\n",
+    "distancia_2_3 = distancia(vec2, vec3, precision=2)\n",
+    "distancia_2_4 = distancia(vec2, vec4, precision=2)\n",
+    "distancia_3_4 = distancia(vec3, vec4, precision=2)\n",
+    "\n",
+    "\n",
+    "print(f\"Distancia entre vec1 y vec2: {distancia_1_2}\")\n",
+    "print(f\"Distancia entre vec1 y vec3: {distancia_1_3}\")\n",
+    "print(f\"Distancia entre vec1 y vec4: {distancia_1_4}\")\n",
+    "print(f\"Distancia entre vec2 y vec3: {distancia_2_3}\")\n",
+    "print(f\"Distancia entre vec2 y vec4: {distancia_2_4}\")\n",
+    "print(f\"Distancia entre vec3 y vec4: {distancia_3_4}\")\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -283,13 +466,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "| vec1  | vec2| vec3   |vec4|\n",
+    "|:---------|:------|:------------|------|\n",
+    "|   vec1|    | 20.6  | 15.5    |14.05|\n",
+    "|vec2    | 20.6    |  | 12.84 |13.54|\n",
+    "|vec3    | 14.05  | 13.54 |   |3.0|\n",
+    "|vec4    |14.05|13.54|3.0|   |\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "¿Cuáles son más semejantes?"
+    "¿Cuáles son más semejantes? Los mas semejantes son el vec3 y vec4"
    ]
   },
   {
@@ -362,7 +553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
