--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
@@ -66,10 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "attachments": {
@@ -94,10 +96,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distancia entre el vector 1 y el vector 2: 5.20\n",
+      "Distancia entre el vector 1 y el vector 3: 10.39\n",
+      "Distancia entre el vector 2 y el vector 3: 5.20\n",
+      "No es posible hallar la distancia: los vectores no tienen el mismo número de dimensiones.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def calcular_distancia(v1, v2):\n",
+    "    \"\"\"\n",
+    "    Función que calcula la distancia euclidiana entre dos vectores usando numpy.\n",
+    "    \"\"\"\n",
+    "    return np.linalg.norm(np.array(v1) - np.array(v2))\n",
+    "\n",
+    "def distancias_entre_vectores(vectores):\n",
+    "    \"\"\"\n",
+    "    Función que recorre una lista de vectores y muestra la distancia de cada uno con el resto.\n",
+    "    Si los vectores no tienen el mismo número de dimensiones, imprime un mensaje de error.\n",
+    "    \"\"\"\n",
+    "    # Verificar que todos los vectores tienen la misma dimensión\n",
+    "    dimensiones = [len(v) for v in vectores]\n",
+    "    if len(set(dimensiones)) > 1:\n",
+    "        print(\"No es posible hallar la distancia: los vectores no tienen el mismo número de dimensiones.\")\n",
+    "        return\n",
+    "\n",
+    "    # Calcular y mostrar la distancia entre cada par de vectores\n",
+    "    for i in range(len(vectores)):\n",
+    "        for j in range(i + 1, len(vectores)):  # Evitar repetir comparaciones\n",
+    "            dist = calcular_distancia(vectores[i], vectores[j])\n",
+    "            print(f\"Distancia entre el vector {i+1} y el vector {j+1}: {dist:.2f}\")\n",
+    "\n",
+    "# Ejemplo de uso:\n",
+    "vectores = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "distancias_entre_vectores(vectores)\n",
+    "\n",
+    "# Si se tiene un conjunto de vectores con dimensiones diferentes\n",
+    "vectores_incompatibles = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5]\n",
+    "]\n",
+    "\n",
+    "distancias_entre_vectores(vectores_incompatibles)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -122,16 +178,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No es posible hallar la distancia: los vectores no tienen el mismo número de dimensiones.\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "def calcular_distancia(v1, v2):\n",
+    "    \"\"\"\n",
+    "    Función que calcula la distancia euclidiana entre dos vectores usando numpy.\n",
+    "    \"\"\"\n",
+    "    return np.linalg.norm(np.array(v1) - np.array(v2))\n",
+    "\n",
+    "def distancias_entre_vectores(vectores):\n",
+    "    \"\"\"\n",
+    "    Función que recorre una lista de vectores y muestra la distancia de cada uno con el resto.\n",
+    "    Si los vectores no tienen el mismo número de dimensiones, imprime un mensaje de error.\n",
+    "    \"\"\"\n",
+    "    # Verificar que todos los vectores tienen la misma dimensión\n",
+    "    dimensiones = [len(v) for v in vectores]\n",
+    "    if len(set(dimensiones)) > 1:\n",
+    "        print(\"No es posible hallar la distancia: los vectores no tienen el mismo número de dimensiones.\")\n",
+    "        return\n",
+    "\n",
+    "    # Calcular y mostrar la distancia entre cada par de vectores\n",
+    "    for i in range(len(vectores)):\n",
+    "        for j in range(i + 1, len(vectores)):  # Evitar repetir comparaciones\n",
+    "            dist = calcular_distancia(vectores[i], vectores[j])\n",
+    "            print(f\"Distancia entre el vector {i+1} y el vector {j+1}: {dist:.2f}\")\n",
     "vec1 = [12,-4,3,0, 3.5]\n",
     "vec2 = [1, 3, -0.33, -12.1]\n",
     "vec3 = [1,0,-4]\n",
     "vec3 = [-2,0,-1,0]\n",
     "vec4 = [0,0,1,1]\n",
-    "lista_vectores = [vec1,vec2,vec3,vec4]\n"
+    "lista_vectores = [vec1,vec2,vec3,vec4]\n",
+    "\n",
+    "distancias_entre_vectores(lista_vectores)\n"
    ]
   },
   {
@@ -164,10 +254,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9949366763261819\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec_1_2 = np.array([3,6,8,10])\n",
+    "vec_1_3= np.array([4,7,9,14])\n",
+    "dot_product= np.dot (vec_1_2, vec_1_3)\n",
+    "norm_1= np.linalg.norm(vec_1_2)\n",
+    "norm_2= np.linalg.norm(vec_1_3)\n",
+    "cos_ang_1_2= dot_product/(norm_1 * norm_2)\n",
+    "print(cos_ang_1_2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.508526932138222\n",
+      "84.11658576047888\n",
+      "15.034301149305037\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "vec2 = np.array([1, 3, -0.33, -12.1])\n",
+    "vec3 = np.array([-2,0,-1,0])\n",
+    "vec4 = np.array([0,0,1,1])\n",
+    "dot_product_2_3= np.dot(vec2,vec3)\n",
+    "dot_product_3_4= np.dot(vec3,vec4)\n",
+    "dot_product_2_4= np.dot(vec2,vec4)\n",
+    "\n",
+    "norm_2= np.linalg.norm(vec2)\n",
+    "norm_3=  np.linalg.norm(vec3)\n",
+    "norm_4=  np.linalg.norm(vec4)\n",
+    "cos_ang_2_3= dot_product/(norm_2 * norm_3)\n",
+    "cos_ang_3_4= dot_product/(norm_3 * norm_4)\n",
+    "cos_ang_2_4= dot_product/(norm_2 * norm_4)\n",
+    "print(cos_ang_2_3)\n",
+    "print(cos_ang_3_4)\n",
+    "print(cos_ang_2_4)\n"
+   ]
   },
   {
    "attachments": {
@@ -192,10 +334,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de la multiplicación de matrices:\n",
+      "[[ 58  64]\n",
+      " [139 154]]\n",
+      "Error: no se pueden multiplicar\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def multiplicar_matrices(matriz_A, matriz_B):\n",
+    "    \"\"\"\n",
+    "    Función para multiplicar dos matrices (arrays de numpy) si sus dimensiones son compatibles.\n",
+    "    \"\"\"\n",
+    "    # Comprobamos si se pueden multiplicar las matrices\n",
+    "    if matriz_A.shape[1] != matriz_B.shape[0]:\n",
+    "        print(\"Error: no se pueden multiplicar\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Si las dimensiones son correctas, multiplicamos las matrices\n",
+    "    matriz_resultado = np.dot(matriz_A, matriz_B)\n",
+    "    \n",
+    "    return matriz_resultado\n",
+    "\n",
+    "# Ejemplo de uso:\n",
+    "\n",
+    "# Matriz A (2x3)\n",
+    "matriz_A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "\n",
+    "# Matriz B (3x2)\n",
+    "matriz_B = np.array([\n",
+    "    [7, 8],\n",
+    "    [9, 10],\n",
+    "    [11, 12]\n",
+    "])\n",
+    "\n",
+    "resultado = multiplicar_matrices(matriz_A, matriz_B)\n",
+    "if resultado is not None:\n",
+    "    print(\"Resultado de la multiplicación de matrices:\")\n",
+    "    print(resultado)\n",
+    "\n",
+    "# Caso con matrices incompatibles\n",
+    "matriz_incompatible = np.array([\n",
+    "    [1, 2]\n",
+    "])\n",
+    "\n",
+    "resultado_incompatible = multiplicar_matrices(matriz_A, matriz_incompatible)\n"
+   ]
   },
   {
    "attachments": {
@@ -229,10 +425,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de la multiplicación de matrices:\n",
+      "[[93 59]\n",
+      " [66 48]\n",
+      " [47 45]]\n",
+      "Error: no se pueden multiplicar\n",
+      "Resultado de la multiplicación de matrices:\n",
+      "[[-10  10   6]\n",
+      " [ -6   8   6]\n",
+      " [-10  10   6]\n",
+      " [ -9  12   9]]\n",
+      "Error: no se pueden multiplicar\n"
+     ]
+    }
+   ],
+   "source": [
+    "A= [[9,5,8,5],\n",
+    "    [6,6,3,6],\n",
+    "    [0,8,1,9]]\n",
+    "B= [[4,2],\n",
+    "    [2,2],\n",
+    "    [4,2],\n",
+    "    [3,3]]\n",
+    "C= [[-2,1,0],\n",
+    "    [-1,3,3]]\n",
+    "\n",
+    "matriz_A_np= np.array(A)\n",
+    "matriz_B_np= np.array(B)\n",
+    "matriz_C_np= np.array(C)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def multiplicar_matrices(matriz_A_np, matriz_B_np):\n",
+    "    \"\"\"\n",
+    "    Función para multiplicar dos matrices (arrays de numpy) si sus dimensiones son compatibles.\n",
+    "    \"\"\"\n",
+    "    # Comprobamos si se pueden multiplicar las matrices\n",
+    "    if matriz_A_np.shape[1] != matriz_B_np.shape[0] :\n",
+    "        print(\"Error: no se pueden multiplicar\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Si las dimensiones son correctas, multiplicamos las matrices\n",
+    "    matriz_resultado = np.dot(matriz_A_np, matriz_B_np)\n",
+    "    \n",
+    "    return matriz_resultado\n",
+    "\n",
+    "resultado = multiplicar_matrices(matriz_A_np, matriz_B_np)\n",
+    "if resultado is not None:\n",
+    "    print(\"Resultado de la multiplicación de matrices:\")\n",
+    "    print(resultado)\n",
+    "\n",
+    "# Caso con matrices incompatibles\n",
+    "matriz_incompatible = np.array([\n",
+    "    [1, 2]\n",
+    "])\n",
+    "\n",
+    "resultado_incompatible = multiplicar_matrices(matriz_A, matriz_incompatible)\n",
+    "\n",
+    "def multiplicar_matrices(matriz_B_np, matriz_C_np):\n",
+    "    \"\"\"\n",
+    "    Función para multiplicar dos matrices (arrays de numpy) si sus dimensiones son compatibles.\n",
+    "    \"\"\"\n",
+    "    # Comprobamos si se pueden multiplicar las matrices\n",
+    "    if matriz_B_np.shape[1] != matriz_C_np.shape[0] :\n",
+    "        print(\"Error: no se pueden multiplicar\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Si las dimensiones son correctas, multiplicamos las matrices\n",
+    "    matriz_resultado = np.dot(matriz_B_np, matriz_C_np)\n",
+    "    \n",
+    "    return matriz_resultado\n",
+    "\n",
+    "resultado = multiplicar_matrices(matriz_B_np, matriz_C_np)\n",
+    "if resultado is not None:\n",
+    "    print(\"Resultado de la multiplicación de matrices:\")\n",
+    "    print(resultado)\n",
+    "\n",
+    "# Caso con matrices incompatibles\n",
+    "matriz_incompatible = np.array([\n",
+    "    [1, 2]\n",
+    "])\n",
+    "\n",
+    "resultado_incompatible = multiplicar_matrices(matriz_B, matriz_incompatible)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
