--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
       " ['sobre' 'su' 'sombra']\n",
       " ['maldita' 'y' 'traicionera']]\n",
       "\n",
-      "Array con las longitudes de las palabras:\n",
+      "Array con las longitudes de las palabra:\n",
       "[[ 2  6  5]\n",
       " [ 5  2  6]\n",
       " [ 7  1 11]]\n"
@@ -699,7 +699,7 @@
     "\n",
     "longitudes = np.vectorize(len)(array_palabras)\n",
     "\n",
-    "print(\"\\nArray con las longitudes de las palabras:\")\n",
+    "print(\"\\nArray con las longitudes de las palabra:\")\n",
     "print(longitudes)\n"
    ]
   }
