--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
@@ -69,10 +69,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.43929623e-01 4.36313901e-01 7.67356706e-01 3.02597462e-01\n",
+      "  9.32417271e-01 2.04435329e-01 1.65519989e-01 3.72019476e-01\n",
+      "  9.56563374e-01 7.30067039e-01]\n",
+      " [2.48902672e-02 8.41464992e-01 6.75918826e-01 2.40099207e-01\n",
+      "  6.19613152e-01 2.91399579e-01 1.65216242e-01 2.61733123e-01\n",
+      "  3.65329764e-01 6.83441630e-01]\n",
+      " [5.76022154e-04 5.25953774e-02 7.55964563e-01 6.17190303e-01\n",
+      "  4.79251855e-01 9.40443322e-01 2.82395233e-01 1.89500172e-01\n",
+      "  7.28072321e-01 8.42027440e-01]\n",
+      " [8.72098676e-01 9.23271939e-01 7.32865230e-01 8.66876611e-01\n",
+      "  1.34991065e-01 7.68357789e-01 2.60570907e-01 7.73484979e-01\n",
+      "  1.98716651e-01 8.08138428e-01]\n",
+      " [6.43273945e-01 9.19291565e-01 3.52413793e-01 6.87105905e-01\n",
+      "  5.07959471e-01 8.43933626e-01 6.82041181e-01 8.84321100e-01\n",
+      "  5.79971353e-01 3.94984904e-01]\n",
+      " [1.30701886e-01 3.03528403e-01 6.98716837e-01 5.27272443e-01\n",
+      "  4.54910870e-01 3.05032352e-01 8.10893269e-01 4.38301943e-01\n",
+      "  6.01144160e-01 2.96036801e-01]\n",
+      " [1.87790519e-01 8.19523522e-01 8.90344702e-01 4.04922051e-01\n",
+      "  2.75185325e-02 5.72565902e-02 4.64006141e-01 3.04199523e-01\n",
+      "  2.67930714e-01 6.07325978e-01]\n",
+      " [2.36289594e-01 9.44709196e-01 6.46349431e-01 7.35975333e-01\n",
+      "  8.91891197e-01 7.54972498e-01 2.16044170e-01 5.28322022e-01\n",
+      "  9.55675644e-01 7.79465334e-01]\n",
+      " [8.51770679e-01 1.51695415e-01 1.85532716e-01 4.49347031e-02\n",
+      "  9.60353189e-01 5.81476321e-01 4.30601021e-01 4.25889043e-01\n",
+      "  8.52953908e-01 6.19947292e-02]\n",
+      " [7.26600336e-01 5.52473729e-01 6.27223565e-01 3.65881712e-01\n",
+      "  8.66152007e-01 5.50148474e-01 9.04559722e-01 7.58781818e-01\n",
+      "  7.18422569e-01 2.52869276e-01]]\n",
+      "el valor minimo es:  0.0005760221544804933\n",
+      "el valor maximo es:  0.9603531887150215\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matriz = np.random.rand(10,10)\n",
+    "print(matriz)\n",
+    "\n",
+    "print(\"el valor minimo es: \", np.min(matriz))\n",
+    "print(\"el valor maximo es: \", np.max(matriz))"
+   ]
   },
   {
    "attachments": {
@@ -97,10 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.13609843 0.81792077 0.52353151 0.83914479 0.40675453 0.35682725\n",
+      " 0.47358678 0.10027813 0.8991034  0.06954669 0.23604246 0.39307749\n",
+      " 0.29243735 0.37706593 0.82116882 0.25754803 0.94147761 0.45914651\n",
+      " 0.48628037 0.69702002 0.44083871 0.51515099 0.68388079 0.40145375\n",
+      " 0.17248722 0.17367732 0.73850973 0.25451583 0.52617351 0.10670677]\n",
+      "la media de los elementos del vector es: 0.45324838313618226\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector= np.random.rand(30)\n",
+    "print(vector)\n",
+    "print(\"la media de los elementos del vector es:\", np.mean(vector))"
+   ]
   },
   {
    "attachments": {
@@ -135,10 +199,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "matriz_2 = np.array([[i % 2 if j % 2 == 0 else (i + 1) % 2 for j in range(8)] for i in range(8)])\n",
+    "\n",
+    "print(matriz_2)"
+   ]
   },
   {
    "attachments": {
@@ -162,9 +246,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "patron = np.array([[0, 1], [1, 0]])\n",
+    "\n",
+    "matriz_3= np.tile(patron, (4, 4))\n",
+    "print(matriz_3)"
+   ]
   },
   {
    "attachments": {
@@ -189,10 +295,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz original:\n",
+      "[[-0.78777203 -0.05766301  1.22953042 -1.09764231  0.91222094]\n",
+      " [-1.04996331  0.93011231 -0.00373872  0.73671558 -0.57533439]\n",
+      " [ 0.31410361  0.00301288  0.08455125 -0.31938129 -0.0550354 ]\n",
+      " [ 0.58937536 -0.71176712  0.72696944 -1.24251842 -0.78093989]\n",
+      " [ 0.38192644 -0.10230732 -0.39111655  1.38305299  0.61750142]]\n",
+      "\n",
+      "Matriz estandarizada:\n",
+      "[[-1.11849857 -0.11911273  1.64281985 -1.54265435  1.20848115]\n",
+      " [-1.47739052  1.23297118 -0.04530023  0.9682464  -0.82771025]\n",
+      " [ 0.38976783 -0.03605853  0.0755526  -0.47735723 -0.11551601]\n",
+      " [ 0.76656456 -1.01446173  0.95490571 -1.74096327 -1.10914661]\n",
+      " [ 0.48260489 -0.18022263 -0.57554969  1.8529642   0.805064  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Crear una matriz aleatoria de 5x5\n",
+    "matriz = np.random.randn(5, 5)\n",
+    "\n",
+    "# Calcular la media y la desviación estándar\n",
+    "media = np.mean(matriz)\n",
+    "desviacion_estandar = np.std(matriz)\n",
+    "\n",
+    "# Estandarizar la matriz\n",
+    "matriz_estandarizada = (matriz - media) / desviacion_estandar\n",
+    "\n",
+    "# Mostrar la matriz original y la estandarizada\n",
+    "print(\"Matriz original:\")\n",
+    "print(matriz)\n",
+    "print(\"\\nMatriz estandarizada:\")\n",
+    "print(matriz_estandarizada)\n"
+   ]
   },
   {
    "attachments": {
@@ -217,15 +361,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índices de los valores no cero: [0 1 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([1, 2, 0, 0, 4, 0])\n",
+    "\n",
+    "# Encontrar los índices de los valores que no son 0\n",
+    "indices_no_cero = np.nonzero(vector)[0]\n",
+    "\n",
+    "# Mostrar los índices\n",
+    "print(\"Índices de los valores no cero:\", indices_no_cero)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -239,12 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
