--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -460,7 +460,7 @@
     "            colocado = True\n",
     "\n",
     "# Mostrar el tablero actualizado\n",
-    "print(\"Tablero final:\")\n",
+    "print(\"Tablero final\")\n",
     "print(tablero)\n"
    ]
   },
